--- a/ShoppingApp/app/src/main/res/layout/fragment_basket.xml
+++ b/ShoppingApp/app/src/main/res/layout/fragment_basket.xml
@@ -28,6 +28,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btnPurchase">
 
+
+            <ImageView
+                android:id="@+id/ivClear"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_delete"
+                app:layout_constraintTop_toBottomOf="@id/vDivider"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_margin="15dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="@{v -> basketFragment.clearTheBasket()}"/>
+
             <View
                 android:id="@+id/vDivider"
                 android:layout_width="200dp"
@@ -54,8 +67,8 @@
                 android:id="@+id/ivClose"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_close"
                 android:background="@drawable/bg_arrow_back"
+                android:src="@drawable/ic_close"
                 app:layout_constraintTop_toBottomOf="@id/vDivider"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_margin="15dp"
