--- a/ShoppingApp/app/src/main/res/navigation/nav_graph_main.xml
+++ b/ShoppingApp/app/src/main/res/navigation/nav_graph_main.xml
@@ -20,7 +20,17 @@
         android:name="com.shopping.app.ui.auth.authbase.AuthBaseFragment"
         android:label="AuthFragment" >
         <action
-            android:id="@+id/action_authFragment_to_mainMenuFragment"
+            android:id="@+id/action_authFragment_to_storeFragment"
+            app:destination="@id/storeFragment"
+            app:popUpTo="@id/nav_graph_main"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/storeFragment"
+        android:name="com.shopping.app.ui.store.StoreFragment"
+        android:label="AuthFragment" >
+        <action
+            android:id="@+id/action_storeFragment_to_mainMenuFragment"
             app:destination="@id/mainMenuFragment"
             app:popUpTo="@id/nav_graph_main"
             app:popUpToInclusive="true" />
@@ -44,6 +54,11 @@
             app:popUpTo="@id/nav_graph_main"
             app:popUpToInclusive="true"
             app:destination="@id/authFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_storeFragment"
+            app:popUpTo="@id/nav_graph_main"
+            app:popUpToInclusive="true"
+            app:destination="@id/storeFragment" />
     </fragment>
     <fragment
         android:id="@+id/mainMenuFragment"
@@ -52,5 +67,8 @@
         <action
             android:id="@+id/action_mainMenuFragment_to_splashFragment"
             app:destination="@id/splashFragment" />
+        <action
+            android:id="@+id/action_mainMenuFragment_to_storeFragment"
+            app:destination="@id/storeFragment" />
     </fragment>
 </navigation>
