--- a/ShoppingApp/app/src/main/res/layout/item_recipe.xml
+++ b/ShoppingApp/app/src/main/res/layout/item_recipe.xml
@@ -3,7 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:bind="http://schemas.android.com/tools">
   <!--
-    TODO (Step 12): Add a component in your view
+    Step 12: Add a component in your view
     https://miamtech.github.io//mealz-documentation/docs/android/usage/component-injection#with-xml-injection
   -->
+    <data>
+        <variable
+            name="dataHolder"
+            type="ai.mealz.core.model.SuggestionsCriteria" />
+
+        <import type="androidx.core.content.ContextCompat"/>
+
+        <variable
+            name="searchAdapter"
+            type="com.shopping.app.ui.main.search.adapter.SearchAdapter" />
+
+    </data>
+    <ai.mealz.sdk.components.recipeJourney.RecipeJourney
+        android:id="@+id/Recipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/recipe"/>
 </layout>
