--- a/ShoppingApp/app/src/main/res/layout/fragment_basket.xml
+++ b/ShoppingApp/app/src/main/res/layout/fragment_basket.xml
@@ -104,7 +104,7 @@
             android:textColor="@color/white"
             app:backgroundTint="@null"
             android:layout_gravity="center"
-            android:onClick="@{v -> basketFragment.clearTheBasket()}"
+            android:onClick="@{v -> basketFragment.purchase()}"
             android:layout_marginVertical="10dp" />
 
     </LinearLayout>
